use Integer.valueOf instead of new Integer
git-svn-id: https://mididuino.googlecode.com/svn/trunk@237 6f8c04f6-b8b6-11de-9846-1b058f2a8eb1